tests/miniJava/neg/004346_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public extends int [] java ( ) { return 0 ; } }
